{
    "name": "Movment",
    "maps": [
        {
            "name": "Movment",
            "id": "a84b4494-bef2-485a-b245-4a71dca1fad7",
            "actions": [
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "59055263-e0da-4d51-a64f-30991f72f915",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "bd872184-73a7-4e3a-8e83-3ba292f76ea8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "a4ffe068-5e51-42b1-9ec5-a73a32d9fec7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveBack",
                    "type": "Button",
                    "id": "feffb90d-9e43-447e-9c1d-0112a027acf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "0b712c8b-353e-4af9-b7a7-ba412683494b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f1965958-2027-4f32-9049-69bd3ab7c11e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb200e15-a82f-48c1-8525-6229e9433220",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc89d2ce-46ee-4b57-98f2-9c1bfd1e2ab8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aad89d2a-5d82-4575-bfca-dac929cacfc2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e70641c-62f7-45fb-82db-4f89311b654c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f21e13b5-897f-4b4e-bef1-d3db1d7b8153",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f058b20-5910-4a57-a4de-9c10df479a0f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "1563c287-4155-448c-962e-5f6e21f1e185",
            "actions": [
                {
                    "name": "UIMovement",
                    "type": "PassThrough",
                    "id": "8cee51a5-9dfd-4a49-8c39-6a9efdf0de71",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "02ff0866-acf6-464d-9a1d-3ce73c7efc71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "2c153063-6422-4ca5-8f19-c79792312c65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7f5e0a2c-cb28-4d8a-b370-d205ee3cda58",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cc7220aa-1ca5-4273-be69-5230f7421352",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIHorizontal",
                    "action": "UIMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4504752b-f78b-4812-b8f3-c6392bbd885e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIHorizontal",
                    "action": "UIMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0568bb46-5ef9-4c78-8bbc-4380ebc46afc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIHorizontal",
                    "action": "UIMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6d23b33f-5744-4101-b08e-1f64d6c8a68b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIHorizontal",
                    "action": "UIMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "da628c8e-5581-4fab-93e9-94bcc8205c7b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIHorizontal",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cd818d5-3a63-4060-9ca4-7667e6c90ba6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "UIHorizontal",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "UIHorizontal",
            "bindingGroup": "UIHorizontal",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}